# agno-conteudo-acroud

./: .env.example  .gitignore  0.llm_call.py  ATUALIZACAO_SECRETS.md  CORRECAO_OPENAI_APLICADA.md  CORRIGIR_OPENAI_KEY.md  DEPLOY_AGORA.md  DEPLOY_STREAMLIT.md  LICENSE  MIGRACAO_GPT4.md  PASSO_A_PASSO_CORRIGIR.md  README.md  SOLUCAO_FINAL_STREAMLIT.md  agentos.py  pyproject.toml
redator_app/: .gitignore  ATUALIZACAO_IMAGENS.md  CONFIGURACAO_IMAGENS_IA.md  ESCOLHA_SUA_API.md  GOOGLE_API_SETUP.md  INICIO_RAPIDO.md  INSTRUCOES_GLOBAIS.md  MELHORIAS_IMAGENS.md  QUICK_START.md  README.md  RESUMO_PROJETO.md  SUPABASE_SETUP.md  app.py  install.sh  requirements.txt  supabase_setup.sql
redator_app/agents/: __init__.py  agente_pesquisador.py  agente_redator.py  gerador_imagem.py
redator_app/config/: instrucoes_globais.py
redator_app/memoria/: __init__.py  gerenciador_memoria.py
redator_app/utils/: google_docs_handler.py  supabase_handler.py
